--- a/my_projects/ecommerce_project/ecommerce_app/templates/ecommerce/eco_nav.html
+++ b/my_projects/ecommerce_project/ecommerce_app/templates/ecommerce/eco_nav.html
@@ -15,7 +15,7 @@
           <a class="nav-link" href="#">Features</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link" href="{% url 'eco-cart' %}">cart{%if cart %} ({{cart|length}}) {%endif%}</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">About</a>
