--- a/my_projects/ecommerce_project/eco_cart/templates/cart/cart.html
+++ b/my_projects/ecommerce_project/eco_cart/templates/cart/cart.html
@@ -113,7 +113,7 @@
                     <h4>Shipping Address</h4>
                 </div>
                 <div class="card-body">
-                    <form class="needs-validation" novalidate>
+                    <form class="needs-validation" novalidate id="payment-form">
                       {%if form.non_field_errors %}
                         <div class="alert alert-danger">
                           {{ form.non_field_errors}}
@@ -135,21 +135,21 @@
                         <div class="row">
                           <div class="col-md-6 mb-3">
                             <label for="firstName">First name</label>
-                            <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
+                            <input type="text" class="form-control" id="firstName" name="first_name" placeholder="" value="" required>
                             <div class="invalid-feedback">
                               Valid first name is required.
                             </div>
                           </div>
                           <div class="col-md-6 mb-3">
                             <label for="lastName">Last name</label>
-                            <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
+                            <input type="text" class="form-control" id="lastName" name="last_name" placeholder="" value="" required>
                             <div class="invalid-feedback">
                               Valid last name is required.
                             </div>
                           </div>
                         </div>
             
-                        <div class="mb-3">
+                        <!-- <div class="mb-3">
                           <label for="username">Username</label>
                           <div class="input-group">
                             <div class="input-group-prepend">
@@ -160,41 +160,67 @@
                               Your username is required.
                             </div>
                           </div>
-                        </div>
+                        </div> -->
             
                         <div class="mb-3">
                           <label for="email">Email <span class="text-muted">(Optional)</span></label>
-                          <input type="email" class="form-control" id="email" placeholder="you@example.com">
+                          <input type="email" class="form-control" name="email" id="email" placeholder="you@example.com">
                           <div class="invalid-feedback">
                             Please enter a valid email address for shipping updates.
+                          </div>
+                        </div>
+
+                        <div class="mb-3">
+                          <label for="phone">Phone <span class="text-muted">(Optional)</span></label>
+                          <input type="text" class="form-control" name="phone" id="phone" placeholder="phone no">
+                          <div class="invalid-feedback">
+                            Please enter a valid phone address for shipping updates.
                           </div>
                         </div>
             
                         <div class="mb-3">
                           <label for="address">Address</label>
-                          <input type="text" class="form-control" id="address" placeholder="1234 Main St" required>
+                          <input type="text" class="form-control" id="address" name="address" placeholder="1234 Main St" required>
                           <div class="invalid-feedback">
                             Please enter your shipping address.
                           </div>
                         </div>
             
-                        <div class="mb-3">
+                        <!-- <div class="mb-3">
                           <label for="address2">Address 2 <span class="text-muted">(Optional)</span></label>
                           <input type="text" class="form-control" id="address2" placeholder="Apartment or suite">
-                        </div>
+                        </div> -->
             
-                        <div class="row">
-                          <div class="col-md-5 mb-3">
-                            <label for="country">Country</label>
-                            <select class="custom-select d-block w-100" id="country" required>
+                         <div class="row">
+                          <div class="col-md-6 mb-3">
+                            <label for="country">Place</label>
+                          <input type="text" class="form-control" id="place" name="place" placeholder="place" required>
+
+                            <!-- <select class="custom-select d-block w-100" id="place"  name="place" required>
                               <option value="">Choose...</option>
                               <option>United States</option>
-                            </select>
+                            </select> -->
                             <div class="invalid-feedback">
-                              Please select a valid country.
+                              Please select a valid place.
                             </div>
                           </div>
-                          <div class="col-md-4 mb-3">
+
+                          <div class="col-md-6 mb-3">
+                            <label for="country">Zipcode</label>
+                          <input type="text" class="form-control" id="zipcode" name="zipcode" placeholder="zipcode" required>
+
+                            <!-- <select class="custom-select d-block w-100" id="zipcode" name="zipcode" required>
+                              <option value="">Choose...</option>
+                              <option>United States</option>
+                            </select> -->
+                            <div class="invalid-feedback">
+                              Please select a valid code.
+                            </div>
+                          </div>
+
+
+                         </div>
+                         <!-- <div class="col-md-4 mb-3">
                             <label for="state">State</label>
                             <select class="custom-select d-block w-100" id="state" required>
                               <option value="">Choose...</option>
@@ -212,18 +238,18 @@
                             </div>
                           </div>
                         </div>
-                        <hr class="mb-4">
-                        <div class="custom-control custom-checkbox">
+                        <hr class="mb-4"> -->
+                        <!-- <div class="custom-control custom-checkbox">
                           <input type="checkbox" class="custom-control-input" id="same-address">
                           <label class="custom-control-label" for="same-address">Shipping address is the same as my billing address</label>
                         </div>
                         <div class="custom-control custom-checkbox">
                           <input type="checkbox" class="custom-control-input" id="save-info">
                           <label class="custom-control-label" for="save-info">Save this information for next time</label>
-                        </div>
-                        <hr class="mb-4">
+                        </div>-->
+                        <!-- <hr class="mb-4">  -->
             
-                        <h4 class="mb-3">Payment</h4>
+                        <!-- <h4 class="mb-3">Payment</h4>
             
                         <div class="d-block my-3">
                           <div class="custom-control custom-radio">
@@ -271,8 +297,12 @@
                               Security code required
                             </div>
                           </div>
+                        </div> -->
+                        <div id="card-element">
+                          <h4>Something cool will happen here</h4>
                         </div>
                         <hr class="mb-4">
+                        
                         <button class="btn btn-primary btn-lg btn-block" type="submit">Continue to checkout</button>
                       </form>
                       {%if messages %}
@@ -283,9 +313,7 @@
                         {%endfor%}
                       {%endif%}
 
-                      <div id="cart-element">
-                        <h4>Something cool will happen here</h4>
-                      </div>
+                   
                     
                 </div>
             </div>
@@ -305,5 +333,45 @@
 
 {%block script %}
 
+<script src="https://js.stripe.com/v3/"></script>
+
+<script>
+  var stripe = Stripe('{{stripe_pub_key}}')
+
+  var elements = stripe.elements();
+  var card = elements.create('card');
+
+  card.mount('#card-element')
+
+  var form = document.getElementById('payment-form');
+  form.addEventListener('submit',function(event){
+    event.preventDefault();
+
+    stripe.createToken(card).then(function(result){
+      if (result.error){
+        var errorElement = document.getElementById('card-errors');
+        errorElement.textContent = result.error.messages;
+      }else{
+        stripeTokenHandler(result.token)
+      }
+    })
+
+
+  });
+
+  function stripeTokenHandler(token){
+    var form = document.getElementById('payment-form')
+    var hiddenInput = document.createElement('input')
+    hiddenInput.setAttribute('type','hidden');
+    hiddenInput.setAttribute('name','stripe_token');
+    hiddenInput.setAttribute('value',token.id)
+    form.append(hiddenInput)
+
+    form.submit()
+  }
+    
+    
+  
+</script>
 
 {%endblock script %}
