Template setup done

--- a/my_projects/templates/my_projects/project_list.html
+++ b/my_projects/templates/my_projects/project_list.html
@@ -20,4 +20,13 @@
     </p>
   </div>
 
+
+  <div class="jumbotron">
+    <h1 class="display-3">Track your Daily Tasks</h1>
+  
+    <p class="lead">
+      <a class="btn btn-danger btn-lg" href="{% url 'time-home' %}" role="button">Go to project</a>
+    </p>
+  </div>
+
 {%endblock content%}
