--- a/my_projects/time_track_project/time_track/templates/time_track/time_nav.html
+++ b/my_projects/time_track_project/time_track/templates/time_track/time_nav.html
@@ -8,7 +8,7 @@
     <!-- Links -->
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#">Link 1</a>
+        <a class="nav-link" href="{%url 'social-signup' %}">Sign up</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Link 2</a>
