--- a/my_projects/social_project/social_app/templates/social_app/login.html
+++ b/my_projects/social_project/social_app/templates/social_app/login.html
@@ -5,11 +5,13 @@
 
 
 {%block content %}
-{%include 'social_app/social_nav.html' %}
+<!-- include 'social_app/social_nav.html' %} -->
 <!-- <h4>signup Page </h4> -->
+<h4 class="p-2 bg-dark text-light text-center">LOGIN TO VIEW ALL PROJECTS</h4>
+
 <div class="container-fluid">
     <div class="row d-flex justify-content-center">
-        <div class="col-md-6">
+        <div class="col-md-8">
             <div class="card border border-primary">
                 <div class="card-header text-center bg-dark text-white">
                     <h5>LOGIN  PAGE</h5>
