--- a/my_projects/time_track_project/time_track/templates/time_track/time_nav.html
+++ b/my_projects/time_track_project/time_track/templates/time_track/time_nav.html
@@ -7,14 +7,17 @@
     
     <!-- Links -->
     <ul class="navbar-nav ml-auto">
+
+      {% if not request.user.is_authenticated%}
       <li class="nav-item">
         <a class="nav-link" href="{%url 'social-signup' %}">Sign up</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link 2</a>
+        <a class="nav-link" href="{%url 'social-login' %}">Login</a>
       </li>
+      {%endif%}
       <li class="nav-item">
-        <a class="nav-link" href="#">Link 3</a>
+        <a class="nav-link" href="{%url 'time-account' %}">Account</a>
       </li>
     </ul>
   </nav>
