--- a/my_projects/time_track_project/time_track/templates/time_track/time_nav.html
+++ b/my_projects/time_track_project/time_track/templates/time_track/time_nav.html
@@ -8,7 +8,17 @@
     <!-- Links -->
     <ul class="navbar-nav ml-auto">
 
-      {% if not request.user.is_authenticated%}
+      {% if  request.user.is_authenticated%}
+      <li class="nav-item">
+        <a class="nav-link" href="{%url 'time-account' %}">Account</a>
+      </li>
+
+      
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'social-logout' %}"><i class="fas fa-sign-out-alt"></i>logout</a>
+      </li>
+      
+      {%else%}
       <li class="nav-item">
         <a class="nav-link" href="{%url 'social-signup' %}">Sign up</a>
       </li>
@@ -16,8 +26,6 @@
         <a class="nav-link" href="{%url 'social-login' %}">Login</a>
       </li>
       {%endif%}
-      <li class="nav-item">
-        <a class="nav-link" href="{%url 'time-account' %}">Account</a>
-      </li>
+    
     </ul>
   </nav>
