--- a/my_projects/time_track_project/time_track/templates/time_track/time_nav.html
+++ b/my_projects/time_track_project/time_track/templates/time_track/time_nav.html
@@ -29,3 +29,13 @@
     
     </ul>
   </nav>
+
+  {%if messages %}
+
+  {% for message in messages %}
+
+    <p class="alert alert-success notification is-toast">{{message}}</p>
+
+  {%endfor%}
+
+  {% endif %}
