--- a/my_projects/time_track_project/time_track/templates/time_track/time_account.html
+++ b/my_projects/time_track_project/time_track/templates/time_track/time_account.html
@@ -32,8 +32,10 @@
                     <h5>Email Address:{{user.email}}</h5>
                     <hr>
                     <a href="{% url 'time-edit-account' %}" class="btn btn-sm btn-info">Edit Profile</a>
+                    <a href="{% url 'time-add-team' %}" class="btn btn-sm btn-success">Add Team</a>
                     
                 </div>
+                
             </div>
           </div>
 
