--- a/my_projects/time_track_project/time_track/templates/time_track/time_account.html
+++ b/my_projects/time_track_project/time_track/templates/time_track/time_account.html
@@ -35,7 +35,35 @@
                     <a href="{% url 'time-add-team' %}" class="btn btn-sm btn-success">Add Team</a>
                     
                 </div>
+
+      
                 
+            </div>
+
+            <div class="card mt-2">
+                <div class="card-header text-center bg-dark text-light">
+                   Team list
+                </div>
+                <div class="card-body">
+                    <ul class="list-group">
+                        {%for team in teams %}
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                          {{team.title}}
+                          <span class="badge badge-primary badge-pill">{%if team.created_by == request.user %}owner{%else%}number{%endif%}</span>
+                         
+              
+                        </li>
+                                    <!-- <br> -->
+                                    <strong class="badge badge-warning mb-1">Plan Show</strong>
+                                  <div class="text-center mb-2">
+                                    <a href="" class="btn btn-success btn-sm">details</a>
+                                    <a href="" class="btn btn-info btn-sm  ">activate</a>
+                                  </div>
+                        {%endfor%}
+                      </ul>
+
+                    
+                </div>
             </div>
           </div>
 
