--- a/my_projects/time_track_project/time_team/templates/team/team.html
+++ b/my_projects/time_track_project/time_team/templates/team/team.html
@@ -28,6 +28,11 @@
                         <p>{{member.username}}</p>
                       {%endfor%}
                   </div>
+                  <div class="card-footer">
+                      {%if team.created_by == request.user %}
+                      <a href="{% url 'time-edit-team' %}" class="btn btn-info btn-sm">EDIT</a>
+                      {% endif%}
+                  </div>
               </div>
           </div>
       </div>
