--- a/my_projects/time_track_project/time_track/templates/time_track/time_account.html
+++ b/my_projects/time_track_project/time_track/templates/time_track/time_account.html
@@ -63,7 +63,7 @@
                 <strong class="badge badge-warning mb-1">Plan Show</strong>
                 <div class="text-center mb-2">
                   <a href="{% url 'time-team-details' active_team.id %}" class="btn btn-success btn-sm">details</a>
-                  <a href="" class="btn btn-info btn-sm  ">activate</a>
+                  <!-- <a href="{% url 'tiem-activate-team' active_te" class="btn btn-info btn-sm  ">activate</a> -->
                   {% if active_team.created_by == request.user %}
                   <a href="" class="btn btn-info btn-sm  ">Invite User</a>
 
@@ -93,7 +93,7 @@
                 <strong class="badge badge-warning mb-1">Plan Show</strong>
                 <div class="text-center mb-2">
                   <a href="{% url 'time-team-details' team.id %}" class="btn btn-success btn-sm">details</a>
-                  <a href="" class="btn btn-info btn-sm  ">activate</a>
+                  <a href="{%url 'time-activate-team' team.id %}" class="btn btn-info btn-sm  ">activate</a>
                   {% if active_team.created_by == request.user %}
                   <a href="" class="btn btn-info btn-sm  ">Invite User</a>
 
