time task list&detail view

--- a/my_projects/time_track_project/time_track/templates/time_track/time_nav.html
+++ b/my_projects/time_track_project/time_track/templates/time_track/time_nav.html
@@ -13,6 +13,10 @@
         <a class="nav-link" href="{%url 'time-account' %}">{% firstof request.user.get_full_name request.user.username %}</a>
       </li>
 
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'time-projects-list' %}">Projects</a>
+      </li>
+
       
       <li class="nav-item">
         <a class="nav-link" href="{% url 'social-logout' %}"><i class="fas fa-sign-out-alt"></i>logout</a>
