--- a/my_projects/time_track_project/time_task/templates/project/projects.html
+++ b/my_projects/time_track_project/time_task/templates/project/projects.html
@@ -10,10 +10,121 @@
 {%include 'time_track/time_nav.html'%}
 <ol class="breadcrumb">
   <li class="breadcrumb-item"><a href="{%url 'time-home' %}">Home</a></li>
-  <li class="breadcrumb-item"><a href="#">Projects</a></li>
-  <li class="breadcrumb-item active">single project</li>
+  <!-- <li class="breadcrumb-item"><a href="#">Projects</a></li> -->
+  <li class="breadcrumb-item active">Projects</li>
 </ol>
+
+<div class="container">
+    
+    <div class="card">
+        <div class="card-header">
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+                Add new Task
+              </button>
+        </div>
+
+        <div class="card-body">
+            <div class="row">
+                {% for project in projects %}
+                <div class="col-md-4">
+                    <div class="card-header">
+                        <p>{{project.title}}</p>
+                    </div>
+                    <div class="card-header">
+                        <p>Registerd Time: {{project.registered_time}}</p>
+                        <p>Taks:{{project.num_tasks_todo}}</p>
+                    </div>
+                    <div class="card-footer">
+                        <a href="{% url 'time-project-detail' project.id %}" class="btn btn-info">Details</a>
+                    </div>
+                </div>
+
+            {%empty%}
+                <div class="col">
+                    <p>Nothing Yet...Create one</p>
+                </div>
+            {%endfor%}
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+<!-- The Modal -->
+<div class="modal fade" id="myModal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+  
+        <!-- Modal Header -->
+        <div class="modal-header">
+          <!-- <h4 class="modal-title">A</h4> -->
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
+  
+        <!-- Modal body -->
+        <div class="modal-body" id="project-app">
+            <form action="#" method="POST" @submit="validateForm">
+                {%csrf_token%}
+                <div class="form-group">
+                  <label for="email">Title:</label>
+                  <input type="text" class="form-control" placeholder="Enter Title" id="title" v-model="title" name="title">
+                  <span v-if="showError" class="badge badge-danger">Title field is missing</span>
+                </div>
+              
+
+                <!-- <div class="form-group">
+                  <label for="pwd">Password:</label>
+                  <input type="password" class="form-control" placeholder="Enter password" id="pwd">
+                </div> -->
+                <!-- <div class="form-group form-check">
+                  <label class="form-check-label">
+                    <input class="form-check-input" type="checkbox"> Remember me
+                  </label>
+                </div> -->
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </form>
+        </div>
+  
+        <!-- Modal footer -->
+        <!-- <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+        </div> -->
+  
+      </div>
+    </div>
+  </div>
 
 
 
 {%endblock%}
+
+
+{%block script %}
+
+<script>
+    const ProjectsApp = {
+        data(){
+            return {
+                title:'',
+                showError:false,
+            }
+        },
+        delimiters: ['[[',']]'],
+        methods:{
+            validateForm(e){
+                if (this.title){
+                    return true
+                }
+                this.showError = true
+                e.preventDefault()
+                return false
+            }
+        }
+    }
+
+    Vue.createApp(ProjectsApp).mount('#project-app')
+</script>
+
+{%endblock script%}
