--- a/my_projects/time_track_project/time_task/templates/project/project_detail.html
+++ b/my_projects/time_track_project/time_task/templates/project/project_detail.html
@@ -23,7 +23,10 @@
                     {{project.title}}
                 </div>
                 <div class="card-body">
-                    
+
+                </div>
+                <div class="card-footer">
+                    <a href="{% url 'time-project-edit' project.id %}" class="btn btn-sm btn-warning">EDIT</a>
                 </div>
             </div>
         </div>
