--- a/my_projects/time_track_project/time_task/templates/project/projects.html
+++ b/my_projects/time_track_project/time_task/templates/project/projects.html
@@ -26,7 +26,7 @@
         <div class="card-body">
             <div class="row">
                 {% for project in projects %}
-                <div class="col-md-4">
+                <div class="col-md-4 mb-4">
                     <div class="card-header">
                         <p>{{project.title}}</p>
                     </div>
@@ -38,6 +38,7 @@
                         <a href="{% url 'time-project-detail' project.id %}" class="btn btn-info">Details</a>
                     </div>
                 </div>
+
 
             {%empty%}
                 <div class="col">
