--- a/my_projects/time_track_project/time_task/templates/project/project_detail.html
+++ b/my_projects/time_track_project/time_task/templates/project/project_detail.html
@@ -19,19 +19,137 @@
     <div class="row">
         <div class="col">
             <div class="card">
-                <div class="card-header">
-                    {{project.title}}
+                <div class="card-header bg-dark text-light ">
+                    <h4>{{project.title}}</h4>
+                   
+                    <hr>
+                    <a href="{% url 'time-project-edit' project.id %}" class="btn  btn-warning">EDIT</a>
+                    <a href="#" class="btn btn-info" data-toggle="modal" data-target="#myModal">Add Task</a>
                 </div>
                 <div class="card-body">
+                    <div class="row">
+                    {% if not tasks_todo and not tasks_done %}
+                        <div class="col">
+                            <div class="card-header text-center">
+                                <p>NO TASKS YET</p>
+                            </div>
+                        </div>
+                    {%endif%}
+
+                    {% if tasks_todo%}
+                        {% for task in tasks_todo%}
+                            <div class="col-4">
+                                <div class="card-header">
+                                    {{task.title}}
+                                </div>
+                                <div class="card-footer">
+                                    <a href="" class="btn btn-warning"> Detail</a>
+                                </div>
+                            </div>
+                        {%endfor%}
+                    {%endif%}
+                </div>
 
                 </div>
                 <div class="card-footer">
-                    <a href="{% url 'time-project-edit' project.id %}" class="btn btn-sm btn-warning">EDIT</a>
+
+                    {% if tasks_done%}
+                        {% for task in tasks_done%}
+                            <div class="col-4">
+                                <div class="card-header">
+                                    {{task.title}}
+                                </div>
+                                <div class="card-footer">
+                                    <a href="" class="btn btn-success"> Detail</a>
+                                </div>
+                            </div>
+                        {%endfor%}
+                    {%endif%}
+                    
                 </div>
             </div>
         </div>
+
+
+        <!--start of modal-->
+        
+<!-- The Modal -->
+<div class="modal fade" id="myModal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+  
+        <!-- Modal Header -->
+        <div class="modal-header">
+          <!-- <h4 class="modal-title">A</h4> -->
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
+  
+        <!-- Modal body -->
+        <div class="modal-body" id="project-app">
+            <form action="#" method="POST" @submit="validateForm">
+                {%csrf_token%}
+                <div class="form-group">
+                  <label for="email">Title:</label>
+                  <input type="text" class="form-control" placeholder="Enter Title" id="title" v-model="title" name="title">
+                  <span v-if="showError" class="badge badge-danger">Title field is missing</span>
+                </div>
+              
+
+                <!-- <div class="form-group">
+                  <label for="pwd">Password:</label>
+                  <input type="password" class="form-control" placeholder="Enter password" id="pwd">
+                </div> -->
+                <!-- <div class="form-group form-check">
+                  <label class="form-check-label">
+                    <input class="form-check-input" type="checkbox"> Remember me
+                  </label>
+                </div> -->
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </form>
+        </div>
+  
+        <!-- Modal footer -->
+        <!-- <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+        </div> -->
+  
+      </div>
+    </div>
+  </div>
+    
+        <!--end of modal-->
     </div>
 </div>
 
 
 {%endblock%}
+
+
+
+{%block script %}
+
+<script>
+    const ProjectsApp = {
+        data(){
+            return {
+                title:'',
+                showError:false,
+            }
+        },
+        delimiters: ['[[',']]'],
+        methods:{
+            validateForm(e){
+                if (this.title){
+                    return true
+                }
+                this.showError = true
+                e.preventDefault()
+                return false
+            }
+        }
+    }
+
+    Vue.createApp(ProjectsApp).mount('#project-app')
+</script>
+
+{%endblock script%}
