--- a/my_projects/time_track_project/time_task/templates/project/projects.html
+++ b/my_projects/time_track_project/time_task/templates/project/projects.html
@@ -19,7 +19,7 @@
     <div class="card">
         <div class="card-header">
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
-                Add new Task
+                Add new Project
               </button>
         </div>
 
