--- a/my_projects/time_track_project/time_task/templates/project/project_detail.html
+++ b/my_projects/time_track_project/time_task/templates/project/project_detail.html
@@ -34,16 +34,20 @@
                                 <p>NO TASKS YET</p>
                             </div>
                         </div>
-                    {%endif%}
+                    {%endif%} 
 
                     {% if tasks_todo%}
+                    <!-- <span>TODO TASKS</span>
+                    <hr> -->
                         {% for task in tasks_todo%}
                             <div class="col-4">
                                 <div class="card-header">
-                                    {{task.title}}
+                                    {{task.title}} <span class="badge badge-info">TODO</span>
                                 </div>
                                 <div class="card-footer">
-                                    <a href="" class="btn btn-warning"> Detail</a>
+                                    <!-- <a href="" class="btn btn-warning"> Detail</a> -->
+                                    <a href="{% url 'time-task-detail' project.id task.id %}" class="btn btn-warning"> Detail</a>
+
                                 </div>
                             </div>
                         {%endfor%}
@@ -54,13 +58,16 @@
                 <div class="card-footer">
 
                     {% if tasks_done%}
+                    <h4>DONE TASKS</h4>
                         {% for task in tasks_done%}
                             <div class="col-4">
                                 <div class="card-header">
-                                    {{task.title}}
+                                    {{task.title}} <span class="badge badge-success">DONE</span>
+
+                                    <!-- {{task.title}} -->
                                 </div>
                                 <div class="card-footer">
-                                    <a href="" class="btn btn-success"> Detail</a>
+                                    <a href="{% url 'time-task-detail' project.id task.id %}" class="btn btn-success"> Detail</a>
                                 </div>
                             </div>
                         {%endfor%}
