Task status display

--- a/my_projects/time_track_project/time_task/templates/project/project_detail.html
+++ b/my_projects/time_track_project/time_task/templates/project/project_detail.html
@@ -58,7 +58,7 @@
                 <div class="card-footer">
 
                     {% if tasks_done%}
-                    <h4>DONE TASKS</h4>
+                    <!-- <h4>DONE TASKS</h4> -->
                         {% for task in tasks_done%}
                             <div class="col-4">
                                 <div class="card-header">
