--- a/my_projects/time_track_project/time_task/templates/project/task_edit.html
+++ b/my_projects/time_track_project/time_task/templates/project/task_edit.html
@@ -34,6 +34,21 @@
                           <input type="text" class="form-control" placeholder="Enter Title" id="title" v-model="title" name="title" value="{{task.title}}">
                           <!-- <span v-if="showError" class="badge badge-danger">Title field is missing</span> -->
                         </div>
+
+
+                        <div class="form-group">
+                            <label for="sel1">Select list:</label>
+                            <select class="form-control" id="id_status" name="status">
+                              <option value="todo" {%if task.status == 'todo'%} selected {%endif%}>Todo</option>
+                              <option value="done" {%if task.status == 'done'%} selected {%endif%}>Done</option>
+
+                              <!-- <option>2</option> -->
+                              <!-- <option>3</option> -->
+                              <!-- <option>4</option> -->
+                            </select>
+                          </div>
+
+
                         <button type="submit" class="btn btn-primary">Update</button>
                     </form>
                 </div>
