--- a/my_projects/time_track_project/time_task/templates/project/task_detail.html
+++ b/my_projects/time_track_project/time_task/templates/project/task_detail.html
@@ -19,14 +19,100 @@
 
 
 <div class="container">
-    <div class="row">
-        <div class="col">
+    <div class="row d-flex justify-content-center">
+        <div class="col-6">
             <div class="card">
                 <div class="card-header">
-                    {{task.title}} <span class="badge badge-info">{{task.get_status_display}}</span>
+                    <h4>
+                        {{task.title}} <span class="badge badge-info">{{task.get_status_display}}</span>
+                    <a href="{%url 'time-task-edit' project.id task.id%}" class="btn btn-sm btn-warning">EDIT</a>
+
+                    </h4>
+
+                    <!-- <div class="card-header text-center"> -->
+                       <!-- <p>Register Time</p> -->
+
+                     
+                    <!-- </div> -->
                 </div>
+
+                <div class="card-body d-flex justify-content-center">
+                    <form class="form-inline" action="#" method="POST">
+                        {%csrf_token%}
+
+                        <select class="form-control mb-2 mr-sm-2" id="sel1" name="hours">
+                            <option value="0">0H</option>
+                            {%for i in "x"|rjust:"10"%}
+                            <option value="{{forloop.counter}}">{{forloop.counter}}H</option>
+
+                            {%endfor%}
+                            <!-- <option>2</option>
+                            <option>3</option>
+                            <option>4</option> -->
+                          </select>
+                          <select class="form-control mb-2 mr-sm-2" id="sel1" name="minutes">
+                            <option value="0">0m</option>
+                            {%for i in "x"|rjust:"59"%}
+                            <option value="{{forloop.counter}}">{{forloop.counter}}m</option>
+
+                            {%endfor%}
+                            <!-- <option>2</option>
+                            <option>3</option>
+                            <option>4</option> -->
+                          </select>
+                        <!-- <label for="email" class="mr-sm-2">Email address:</label> -->
+                        <!-- <input type="email" class="form-control mb-2 mr-sm-2" placeholder="Enter email" id="email"> -->
+                        <!-- <label for="pwd" class="mr-sm-2">Password:</label> -->
+                        <input type="date" name="date" id="id_date" class="form-control mb-2 mr-sm-2" placeholder="" value="{{today|date:'Y-m-d'}}">
+                      
+                        <button type="submit" class="btn btn-primary mb-2">Submit</button>
+                      </form>
+                </div>
+              
                 <div class="card-footer">
-                    <a href="{%url 'time-task-edit' project.id task.id%}" class="btn btn-warning">EDIT</a>
+                    <p>
+                        <strong>All Activity</strong>
+                    </p>
+
+                    {% if task.entries.all %}
+
+                    <table class="table table-bordered table-sm">
+                        <thead>
+                          <tr>
+                            <th>Date</th>
+                            <th>User</th>
+                            <th>Time</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                            {% for entry in task.entries.all %}
+                          <tr>
+                            <td>{{entry.created_at}}</td>
+                            <td>{% firstof entry.created_by.get_full_name entry.created_by.username %}</td>
+                            <td>{{entry.minutes}}</td>
+
+                            <td>
+                                <a href="" class="btn btn-sm">edit</a>
+                                <a href="" class="btn btn-sm">delete</a>
+                            </td>
+                          </tr>
+
+                          {% endfor%}
+                          
+                          
+                        </tbody>
+                        <tfoot>
+                            <tr>
+                                <th colspan="2">Total</th>
+                                <th colspan="2">{{task.registered_time}}</th>
+                            </tr>
+                        </tfoot>
+                      </table>
+
+                      {% else%}
+                      <p>No activity</p>
+
+                    {%endif%}
                 </div>
             </div>
         </div>
