Activity of task Edit and Delete

--- a/my_projects/time_track_project/time_task/templates/project/project_detail.html
+++ b/my_projects/time_track_project/time_task/templates/project/project_detail.html
@@ -43,6 +43,9 @@
                             <div class="col-4">
                                 <div class="card-header">
                                     {{task.title}} <span class="badge badge-info">TODO</span>
+                                    <span class="badge badge-info">@Time:{{task.registered_time}}</span>
+
+
                                 </div>
                                 <div class="card-footer">
                                     <!-- <a href="" class="btn btn-warning"> Detail</a> -->
@@ -63,6 +66,7 @@
                             <div class="col-4">
                                 <div class="card-header">
                                     {{task.title}} <span class="badge badge-success">DONE</span>
+                                    <span class="badge badge-success"> @Time:{{task.registered_time}}</span>
 
                                     <!-- {{task.title}} -->
                                 </div>
