--- a/my_projects/time_track_project/time_task/templates/project/task_detail.html
+++ b/my_projects/time_track_project/time_task/templates/project/task_detail.html
@@ -92,8 +92,8 @@
                             <td>{{entry.minutes}}</td>
 
                             <td>
-                                <a href="" class="btn btn-sm">edit</a>
-                                <a href="" class="btn btn-sm">delete</a>
+                                <a href="{% url 'time-edit-entry' project.id task.id entry.id %}" class="btn btn-sm btn-warning">edit</a>
+                                <a href="{% url 'time-delete-entry' project.id task.id entry.id %}" class="btn btn-sm btn-danger">delete</a>
                             </td>
                           </tr>
 
