Setup for dashboard done

--- a/my_projects/time_track_project/time_track/templates/time_track/time_nav.html
+++ b/my_projects/time_track_project/time_track/templates/time_track/time_nav.html
@@ -17,6 +17,10 @@
         <a class="nav-link" href="{% url 'time-projects-list' %}">Projects</a>
       </li>
 
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'time-dashboard' %}">dashboard</a>
+      </li>
+
       
       <li class="nav-item">
         <a class="nav-link" href="{% url 'social-logout' %}"><i class="fas fa-sign-out-alt"></i>logout</a>
