Time for Month added

--- a/my_projects/time_track_project/time_dashboard/templates/time_dashboard/dashboard.html
+++ b/my_projects/time_track_project/time_dashboard/templates/time_dashboard/dashboard.html
@@ -22,7 +22,7 @@
             <div class="card">
                 <div class="card-header">
                     <h4>ME</h4>
-                    <p><b>TIME:</b> {%if num_days is 0 %}Today{%else%}{{date_user|date:"Y-m-d"}}{%endif%}</p>
+                    <p><b>DATE:</b> {%if num_days is 0 %}Today{%else%}{{date_user|date:"Y-m-d"}}{%endif%}</p>
 
 
                 </div>
@@ -74,6 +74,69 @@
                 </div>
             </div>
 
+        </div>
+
+
+        <!--######################-->
+        <div class="col-md-4">
+            <div class="card">
+                <div class="card-header">
+                    <h4>ME</h4>
+                   <p>
+                    <b>MONTH:</b> {%if user_num_months is 0 %}This Month {%else%} {{uer_month|date:"Y-m"}}{%endif%}
+                   </p>
+                </div>
+
+                
+                <div class="card-body">
+                    {%if time_for_user_and_month %}
+                    <!-- <div class="card-header"> -->
+
+                        <table class="table table-hover">
+                            <thead class="bg-dark text-light">
+                                <tr>
+                                    <!-- <td>Task</td> -->
+                                    <td>Project</td>
+                                    <td>Time</td>
+                                </tr>
+                            </thead>
+
+                            <tbody>
+                                {% for project in all_projects%}
+                                {%if project.time_for_user_and_project_and_month > 0 %}
+                                <tr>
+                                    <!-- <td>{{entry.task.title}}</td> -->
+                                    <td>{{project.title}}</td>
+                                    <td>{{project.time_for_user_and_project_and_month}}</td>
+                                </tr>
+                                {%endif%}
+                                {% endfor%}
+                            </tbody>
+
+                            <tfoot>
+                                <tr>
+                                    <td >Total</td>
+                                    <td>{{time_for_user_and_month}}</td>
+                                </tr>
+                            </tfoot>
+                        </table>
+
+
+                    {%else%}
+
+                        <p>No Entry this month</p>
+
+
+                    <!-- </div> -->
+                    {%endif%}
+
+                    <a href="?user_num_months={{user_num_months|add:'1'}}" class="btn btn-sm btn-info">Previous</a>
+                    {%if user_num_months > 0 %}
+                    <a href="?user_num_months={{user_num_months|add:'-1'}}" class="btn btn-sm btn-success">Next</a>
+                    {%endif%}
+                </div>
+
+            </div>
         </div>
     </div>
 </div>
